@@ -36,10 +36,41 @@
 #            control and [-]LOCAL turns off (- on) monitoring of
 #            the modem lines.  The "remctl" option allow remote
 #	     control (ala RFC 2217) of serial-port configuration.
+#            A banner name may also be specified, that banner will
+#            be printed for the line.  If no banner is given, then
+#            no banner is printed.
+#
+# or...
+
+#  BANNER:<banner name>:banner
+#    This will create a banner, if the banner name is given in the
+#    options of a line, that banner will be printed.  This takes the
+#    standard "C" \x characters (\r is carraige return, \n is newline,
+#    etc.).  It also accepts \d, which prints the device name, and
+#    \p, which prints the TCP port number.  Banners can span lines if
+#    the last character on a line is '\'.  Note that you *must* use
+#    \r\n to start a new line.
 #
 # Note that the same device can be listed multiple times under different
 # ports, this allows the same serial port to have both telnet and raw
 # protocols.
+
+BANNER:banner1:Welcome to ser2net TCP port \p device \d\r\n\
+second line \
+third line\r\n
+
+BANNER:banner2:this is ser2net TCP port \p device \d\r\n\
+second line \
+third line\r\n
+
+BANNER:banner3:this is ser2net TCP port \p device \d\r\n\
+second line alksjdf;lasjkdfl;asdjfasf asdfljas;fldkjasfl; askjdfas\
+third line kasldfjas;lkfjasl;fja;slfjasl;f aslfjasl;fjasl;f\
+asl;fjasl;f\r\n\
+alks alskdjf ;asldfj ;aslfkja s;fljas ;fjasfl;a sfl;kasj f;lafasf asfkj\
+askld fjas;ldfjasl;fj alskfjal;sdfjasl;fsal;kfjas;l fjasl;fjasl;\
+kfjasl;fsa\
+ askljdf ;asfj l;asfjasl;kf jasfl;kjas f;lasjfl; asfklas fl;asjf l;safjs;a
 
 2001:raw:600:/dev/ttyS0:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
 #2002:raw:600:/dev/ttyS1:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
@@ -48,8 +79,8 @@
 2005:raw:5:/dev/ttyS4:9600
 2006:raw:5:/dev/ttyS5:9600
 2007:raw:5:/dev/ttyS6:9600
-3001:telnet:0:/dev/ttyS0:19200 remctl
-3011:telnet:3:/dev/ttyS0:19200
+3001:telnet:0:/dev/ttyS0:19200 remctl banner1
+3011:telnet:3:/dev/ttyS0:19200 banner2
 #3002:telnet:0:/dev/ttyS1:9600
 3003:telnet:0:/dev/ttyS2:9600
 3004:telnet:0:/dev/ttyS3:115200
