@@ -31,4 +31,7 @@ int scan_int(char *str);
    is the port number (required). */
 int scan_tcp_port(char *str, struct sockaddr_in *addr);
 
+/* Search for a banner by name. */
+char *find_banner(char *name);
+
 #endif /* UTILS */
